--- a/package.json
+++ b/package.json
@@ -1,15 +1,34 @@
 {
   "name": "back-end",
-  "version": "1.0.50",
+  "author": "CustomAFK",
+  "version": "v0.0.1",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/index.ts",
+    "format": "bun run prettier src/**/*.ts --check",
+    "format:fix": "bun run prettier src/**/*.ts --write",
+    "prepare": "husky install"
   },
   "dependencies": {
+    "@elysiajs/swagger": "^0.7.3",
+    "@prisma/client": "5.3.1",
     "elysia": "latest"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "@commitlint/cli": "^17.7.2",
+    "@commitlint/config-conventional": "^17.7.0",
+    "bun-types": "latest",
+    "husky": "^8.0.0",
+    "lint-staged": "^14.0.1",
+    "prettier": "^3.0.3",
+    "prisma": "^5.3.1"
+  },
+  "husky": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "src/**/*{.js,.ts}": [
+      "bun format"
+    ]
   },
   "module": "src/index.js"
 }
