--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "author": "CustomAFK",
   "version": "v0.0.1",
   "scripts": {
-    "dev": "bun run --watch src/index.ts",
+    "dev": "bun run --watch src/server.ts",
     "format": "bun run prettier src/**/*.ts --check",
     "format:fix": "bun run prettier src/**/*.ts --write",
-    "build:server": "bun build src/index.ts --compile --outfile build/server",
+    "build:server": "bun build src/server.ts --compile --outfile build/server",
     "prepare": "husky install"
   },
   "dependencies": {
+    "@elysiajs/jwt": "^0.7.0",
     "@elysiajs/swagger": "^0.7.3",
     "@prisma/client": "5.3.1",
-    "elysia": "latest"
+    "elysia": "latest",
+    "zod": "^3.22.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.2",
