--- a/.github/workflows/pre_merge.yaml
+++ b/.github/workflows/pre_merge.yaml
@@ -30,5 +30,5 @@ jobs:
       - name: Build bunx
         run: |
           echo "Bun is Building"
-          bunx prisma generate
+          bunx prisma generate deploy
           bun build:server
