--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.427.0",
     "@elysiajs/jwt": "^0.7.0",
     "@elysiajs/swagger": "^0.7.3",
     "@prisma/client": "latest",
-    "elysia": "latest",
-    "zod": "^3.22.3"
+    "elysia": "latest"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.2",
