chore: replace .env

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ JWT_REFRESH_SECRETKEY=
 JWT_REFRESH_EXPIRY=
 
 #AWS service
-AWS_REGION="ap-southeast-1"
-AWS_ACCESSKEY_ID="AKIAVQ42DOON4GUMMJSM"
-AWS_SECRET_ACCESS_KEY="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"
-AWS_BUCKET_NAME="ie104bucket"
+AWS_REGION=
+AWS_ACCESSKEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_BUCKET_NAME=
