--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@elysiajs/jwt": "^0.7.0",
     "@elysiajs/swagger": "^0.7.3",
     "@prisma/client": "latest",
-    "elysia": "latest",
-    "zod": "^3.22.3"
+    "elysia": "latest"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.2",
