--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -43,6 +43,7 @@ jobs:
 
       - name: Edit .env
         run: |
+          pm2 stop ie104-be
           rm -rf .env
           touch .env
           echo "#DATABASE" >> .env
@@ -68,3 +69,4 @@ jobs:
           bunx prisma db pull
           bunx prisma generate deploy
           bun build:server
+          pm2 restart ie104-be
