--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,23 +39,24 @@ jobs:
 
       - name: Edit .env
         run: |
+          pm2 stop "ie104-back-end"
           rm -rf .env
           touch .env
           echo "#DATABASE" >> .env
           echo "DATABASE_URL=${{env.DATABASE_URL}}" >> .env
-          echo "\n\n#SERVER RUNNING" >> .env
+          echo "#SERVER RUNNING" >> .env
           echo "SERVER_PORT=3000" >> .env
-          echo "\n\n#Enviroment in Server"
+          echo "#Enviroment in Server"
           echo "JWT_ACCESS_SECRETKEY=${{env.JWT_ACCESS_SECRETKEY}}" >> .env
           echo "JWT_ACCESS_EXPIRY=${{env.JWT_ACCESS_EXPIRY}}" >> .env
           echo "JWT_REFRESH_SECRETKEY=${{env.JWT_REFRESH_SECRETKEY}}" >> .env
           echo "JWT_REFRESH_EXPIRY=${{env.JWT_REFRESH_EXPIRY}}" >> .env
-          echo "\n\n#AWS key "
+          echo "#AWS key "
           echo "AWS_REGION=ap-southeast-1" >> .env
           echo "AWS_ACCESSKEY_ID=${{env.AWS_ACCESSKEY_ID}}" >> .env
           echo "AWS_SECRET_ACCESS_KEY=${{env.AWS_SECRET_ACCESS_KEY}}" >> .env
           echo "AWS_BUCKET_NAME=${{env.AWS_BUCKET_NAME}}" >> .env
-          echo "\n\n#KEY QR PAY"
+          echo "#KEY QR PAY"
           echo "CLIENT_ID=${{env.CLIENT_ID}}" >> .env
           echo "API_KEY=${{env.API_KEY}}" >> .env
       - name: Build bunx
@@ -64,4 +65,4 @@ jobs:
           bunx prisma db pull
           bunx prisma generate deploy
           bun build:server
-          pm2 start "bun start" --name "ie104-back-end"
+          pm2 restart "ie104-back-end"
